--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react-dom": "^19.2.0",
-    "react": "^19.2.0"
+    "react": "^19.2.0",
+    "@google/genai": "latest",
+    "marked": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
